# WisardClassifier

./: CMakeLists.txt  README.md  test.cpp  test.py  test_wis.py  wis.py  wisardwrapper.py
doc/: Makefile  conf.py
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
doc/_build/latex/: WisardClassifier.aux  WisardClassifier.fdb_latexmk  WisardClassifier.fls  WisardClassifier.idx  WisardClassifier.out  WisardClassifier.tex  WisardClassifier.toc
wislib/: CMakeLists.txt  wisard.cpp  wisard.hpp
